--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["embedded", "no-std"]
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-embedded-hal = "1.0.0"
+embedded-hal = "=1.0.0-rc.1"
 embedded-graphics = { version = "0.8.1", optional = true }
 display-interface = "0.5.0"
 
